@startuml

' Enhanced UML diagram with detailed structure

' Core Entities
entity User {
    * id : Integer
    * username : String
    * password : String
    * is_admin : Boolean
    --
    * scores : List<Score>
    --
    * register()
    * login()
    * logout()
    * is_admin()
}

entity Score {
    * id : Integer
    * wpm : Float
    * accuracy : Float
    * timestamp : DateTime
    * user_id : Integer
    --
    * save()
    * delete()
}

entity TestText {
    * id : Integer
    * content : String
    * difficulty : String
    * category : String
    --
    * get_random_text()
    * get_text_by_difficulty()
    * get_text_by_category()
}

entity UserSession {
    * session_id : String
    * user_id : Integer
    * start_time : DateTime
    * end_time : DateTime
    * is_active : Boolean
    --
    * start_session()
    * end_session()
    * get_session_duration()
}

' Relationships
User ||--o{ Score : has
User }o--{ UserSession : has
Score }o--{ TestText : uses
User }o--{ TestText : reads

' Notes
note right of User
    Represents a user in the system
    with authentication and admin capabilities
end note

note right of Score
    Stores typing test results
    including WPM and accuracy metrics
end note

note right of TestText
    Contains typing test content
    with different difficulties and categories
end note

note right of UserSession
    Tracks user activity sessions
    for better user experience
end note

' Legend
legend right
    <b>Legend:</b>
    ||--o{ : One-to-many relationship
    }o--{ : Association relationship
    * : Public visibility
    -- : Section separator
endlegend

@enduml
